--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         </section>
     </div>
         <footer class="sample mt-5">Neg.n04@gmail.com</footer>
+            <div class="d-flex justify-content-evenly">
+        <section  class="emoji"><a href="https://Instagram.com/negin_n04" target="_blank"><i class="fa-brands fa-instagram"></i></a></section>
+        <section class="emoji"><a href="https://github.com/Neg04" target="_blank"><i class="fa-brands fa-github"></i></a></section>
+        <section class="emoji"><a href="#"><i class="fa-brands fa-twitter"></i></a></section>
+     </div>
         <footer title="my code on GitHub">
             <a href="https://github.com/Neg04/portfolio-responsive.git" target="_blank"
                 class="text-decoration-none text-center d-block mt-5 mb-5">My Source Code</a>
