--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         <section class="d-md-block d-none">
         <div class="workpage-wrapper d-flex justify-content-between">
             <section class="work-box">Work Inquiry <small class="d-block worktogether">Let's work together</small></section>
-            <button class="btn btn-outline-dark mt-3 mb-3"><a href="contact.html" class="text-decoration-none">contact me</a</button>
+            <button class="btn btn-outline-dark mt-3 mb-3"><a href="contact.html" class="text-decoration-none">contact me</a></button>
         </div>
         </section>
     </div>
         <footer class="sample mt-5">Neg.n04@gmail.com</footer>
             <div class="d-flex justify-content-evenly">
-        <section  class="emoji"><a href="https://Instagram.com/negin_n04" target="_blank"><i class="fa-brands fa-instagram"></i></a></section>
+        <section  class="emoji"><a href="https://www.Instagram.com/negin_n04" target="_blank"><i class="fa-brands fa-instagram"></i></a></section>
         <section class="emoji"><a href="https://github.com/Neg04" target="_blank"><i class="fa-brands fa-github"></i></a></section>
         <section class="emoji"><a href="#"><i class="fa-brands fa-twitter"></i></a></section>
      </div>
