--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,16 @@
             <div class="row contact-col">
                 <div class="col-lg-8">
                     <section class="contact-text">Let's get in touch!</section>
-                    <form>
-                    <label for="email" class="d-block">Your Email:</label>
-                        <input type="email" autocomplete="off" class="email-input mt-1 rounded">
-                        <label for="message" class="d-block mt-2">Your Message:</label>
-                        <input type="text" autocomplete="off" class="message-input mt-1 rounded">
-                        <button type="submit" class="btn btn-outline-dark d-block mt-3">Send</button>
-                    </form>
+                <form>
+                    <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control email-input" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+                    <textarea class="form-control message-input" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                </form>
                 </div>
                 <div class="col-lg-4 social-contact">
                     <h5>Email:</h5>
@@ -59,10 +62,12 @@
         </div>
     </div>
     <div class="d-flex justify-content-evenly">
-        <section  class="emoji"><a href="https://Instagram.com/negin_n04" target="_blank"><i class="fa-brands fa-instagram"></i></a></section>
-        <section class="emoji"><a href="https://github.com/Neg04" target="_blank"><i class="fa-brands fa-github"></i></a></section>
+        <section class="emoji"><a href="https://Instagram.com/negin_n04" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a></section>
+        <section class="emoji"><a href="https://github.com/Neg04" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </section>
         <section class="emoji"><a href="#"><i class="fa-brands fa-twitter"></i></a></section>
-     </div>
+    </div>
     <footer>
     <a href="https://github.com/Neg04/portfolio-responsive.git" target="_blank"
         class="text-decoration-none text-center d-block mt-5 mb-5">My Source Code</a>
