edited some classes
deleted a button earlier, then fixed some problems that the elimination caused.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     </nav>
     <section class="greeting text-center mt-5"><i class="fa-regular fa-face-smile-wink"></i> Hello~ I'm</section>
     <h2>Negin.KH</h2>
-        <section class="greeting text-center">A freelancer from Iran</section>
-     <p class="sample">Let's take a look at some of my projects <i class="fa-regular fa-hand-point-down"></i></p> 
+    <section class="greeting-two text-center">A freelancer from Iran</section>
+    
+     <p class="sample-home">Let's take a look at some of my projects <i class="fa-regular fa-hand-point-down"></i></p> 
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -87,12 +88,12 @@
         </div>
         </section>
     </div>
-        <footer class="sample mt-5">Neg.n04@gmail.com</footer>
-            <div class="d-flex justify-content-evenly">
-        <section  class="emoji"><a href="https://www.Instagram.com/negin_n04" target="_blank"><i class="fa-brands fa-instagram"></i></a></section>
-        <section class="emoji"><a href="https://github.com/Neg04" target="_blank"><i class="fa-brands fa-github"></i></a></section>
-        <section class="emoji"><a href="#"><i class="fa-brands fa-twitter"></i></a></section>
-     </div>
+        <section class="sample mt-5">Neg.n04@gmail.com</section>
+         <div class="d-flex justify-content-evenly">
+            <section class="emoji"><a href="https://www.instagram.com/negin-n04/"><i class="fa-brands fa-instagram"></i></a></section>
+            <section class="emoji"><a href="https://github.com/Neg04"><i class="fa-brands fa-github"></i></a></section>
+            <section class="emoji"><a href="#"><i class="fa-brands fa-twitter"></i></a></section>
+         </div>
         <footer title="my code on GitHub">
             <a href="https://github.com/Neg04/portfolio-responsive.git" target="_blank"
                 class="text-decoration-none text-center d-block mt-5 mb-5">My Source Code</a>
